# pods-serdes

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  PodsSerdesConfig.h.in  README.md  c8build.sh  main.cpp
cmake/: Findlibclang.cmake
example/: CMakeLists.txt  femasApiVisitor.cpp  femasApiVisitor.py
example/api-femas/ustpmduserapi/: genSample.hpp
example/api_femas/: messages.py
include/pods-serdes/: sourceGenerator.hpp  tuTraversor.hpp  utilities.hpp
include/pods-serdes/cxx/: fromJsonGen.hpp  gen.hpp  toJsonGen.hpp  toStringGen.hpp  visitorGen.hpp
include/pods-serdes/python/: gen.hpp
src/: main.cpp
